// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Get Queue Limits > shows statistics on queue limits 1`] = `
{
  "embeds": [
    {
      "description": "Use \`?cooldown\` to see your cooldown time",
      "fields": [
        {
          "name": "Number of Submissions:	infinite",
          "value": "The maximum number of submissions that each user may submit.",
        },
        {
          "name": "Submission Cooldown:	none",
          "value": "The minimum amount of time that each user must wait between their own submissions.",
        },
        {
          "name": "Min Song Length:	0",
          "value": "The minimum duration of a song submission.",
        },
        {
          "name": "Max Song Length:	infinite",
          "value": "The maximum duration of a song submission.",
        },
        {
          "name": "Total Queue Length:	infinite",
          "value": "The maximum duration that the queue should take if all its entries were played end-to-end. The queue will automatically close when a submission takes the queue over this limit.",
        },
      ],
      "title": "Queue Limits",
    },
  ],
  "ephemeral": true,
}
`;

exports[`Get Queue Limits > shows statistics on queue limits 2`] = `
{
  "embeds": [
    {
      "description": "Use \`?cooldown\` to see your cooldown time",
      "fields": [
        {
          "name": "Number of Submissions:	infinite",
          "value": "The maximum number of submissions that each user may submit.",
        },
        {
          "name": "Submission Cooldown:	42 seconds",
          "value": "The minimum amount of time that each user must wait between their own submissions.",
        },
        {
          "name": "Min Song Length:	0",
          "value": "The minimum duration of a song submission.",
        },
        {
          "name": "Max Song Length:	infinite",
          "value": "The maximum duration of a song submission.",
        },
        {
          "name": "Total Queue Length:	infinite",
          "value": "The maximum duration that the queue should take if all its entries were played end-to-end. The queue will automatically close when a submission takes the queue over this limit.",
        },
      ],
      "title": "Queue Limits",
    },
  ],
  "ephemeral": true,
}
`;

exports[`Get Queue Limits > shows statistics on queue limits 3`] = `
{
  "embeds": [
    {
      "description": "Use \`?cooldown\` to see your cooldown time",
      "fields": [
        {
          "name": "Number of Submissions:	infinite",
          "value": "The maximum number of submissions that each user may submit.",
        },
        {
          "name": "Submission Cooldown:	none",
          "value": "The minimum amount of time that each user must wait between their own submissions.",
        },
        {
          "name": "Min Song Length:	0",
          "value": "The minimum duration of a song submission.",
        },
        {
          "name": "Max Song Length:	42 seconds",
          "value": "The maximum duration of a song submission.",
        },
        {
          "name": "Total Queue Length:	infinite",
          "value": "The maximum duration that the queue should take if all its entries were played end-to-end. The queue will automatically close when a submission takes the queue over this limit.",
        },
      ],
      "title": "Queue Limits",
    },
  ],
  "ephemeral": true,
}
`;

exports[`Get Queue Limits > shows statistics on queue limits 4`] = `
{
  "embeds": [
    {
      "description": "Use \`?cooldown\` to see your cooldown time",
      "fields": [
        {
          "name": "Number of Submissions:	42",
          "value": "The maximum number of submissions that each user may submit.",
        },
        {
          "name": "Submission Cooldown:	none",
          "value": "The minimum amount of time that each user must wait between their own submissions.",
        },
        {
          "name": "Min Song Length:	0",
          "value": "The minimum duration of a song submission.",
        },
        {
          "name": "Max Song Length:	infinite",
          "value": "The maximum duration of a song submission.",
        },
        {
          "name": "Total Queue Length:	infinite",
          "value": "The maximum duration that the queue should take if all its entries were played end-to-end. The queue will automatically close when a submission takes the queue over this limit.",
        },
      ],
      "title": "Queue Limits",
    },
  ],
  "ephemeral": true,
}
`;

exports[`Get Queue Limits > shows statistics on queue limits 5`] = `
{
  "embeds": [
    {
      "description": "Use \`?cooldown\` to see your cooldown time",
      "fields": [
        {
          "name": "Number of Submissions:	infinite",
          "value": "The maximum number of submissions that each user may submit.",
        },
        {
          "name": "Submission Cooldown:	42 seconds",
          "value": "The minimum amount of time that each user must wait between their own submissions.",
        },
        {
          "name": "Min Song Length:	0",
          "value": "The minimum duration of a song submission.",
        },
        {
          "name": "Max Song Length:	42 seconds",
          "value": "The maximum duration of a song submission.",
        },
        {
          "name": "Total Queue Length:	infinite",
          "value": "The maximum duration that the queue should take if all its entries were played end-to-end. The queue will automatically close when a submission takes the queue over this limit.",
        },
      ],
      "title": "Queue Limits",
    },
  ],
  "ephemeral": true,
}
`;

exports[`Get Queue Limits > shows statistics on queue limits 6`] = `
{
  "embeds": [
    {
      "description": "Use \`?cooldown\` to see your cooldown time",
      "fields": [
        {
          "name": "Number of Submissions:	42",
          "value": "The maximum number of submissions that each user may submit.",
        },
        {
          "name": "Submission Cooldown:	none",
          "value": "The minimum amount of time that each user must wait between their own submissions.",
        },
        {
          "name": "Min Song Length:	0",
          "value": "The minimum duration of a song submission.",
        },
        {
          "name": "Max Song Length:	42 seconds",
          "value": "The maximum duration of a song submission.",
        },
        {
          "name": "Total Queue Length:	infinite",
          "value": "The maximum duration that the queue should take if all its entries were played end-to-end. The queue will automatically close when a submission takes the queue over this limit.",
        },
      ],
      "title": "Queue Limits",
    },
  ],
  "ephemeral": true,
}
`;

exports[`Get Queue Limits > shows statistics on queue limits 7`] = `
{
  "embeds": [
    {
      "description": "Use \`?cooldown\` to see your cooldown time",
      "fields": [
        {
          "name": "Number of Submissions:	42",
          "value": "The maximum number of submissions that each user may submit.",
        },
        {
          "name": "Submission Cooldown:	42 seconds",
          "value": "The minimum amount of time that each user must wait between their own submissions.",
        },
        {
          "name": "Min Song Length:	0",
          "value": "The minimum duration of a song submission.",
        },
        {
          "name": "Max Song Length:	infinite",
          "value": "The maximum duration of a song submission.",
        },
        {
          "name": "Total Queue Length:	infinite",
          "value": "The maximum duration that the queue should take if all its entries were played end-to-end. The queue will automatically close when a submission takes the queue over this limit.",
        },
      ],
      "title": "Queue Limits",
    },
  ],
  "ephemeral": true,
}
`;

exports[`Get Queue Limits > shows statistics on queue limits 8`] = `
{
  "embeds": [
    {
      "description": "Use \`?cooldown\` to see your cooldown time",
      "fields": [
        {
          "name": "Number of Submissions:	42",
          "value": "The maximum number of submissions that each user may submit.",
        },
        {
          "name": "Submission Cooldown:	42 seconds",
          "value": "The minimum amount of time that each user must wait between their own submissions.",
        },
        {
          "name": "Min Song Length:	0",
          "value": "The minimum duration of a song submission.",
        },
        {
          "name": "Max Song Length:	42 seconds",
          "value": "The maximum duration of a song submission.",
        },
        {
          "name": "Total Queue Length:	infinite",
          "value": "The maximum duration that the queue should take if all its entries were played end-to-end. The queue will automatically close when a submission takes the queue over this limit.",
        },
      ],
      "title": "Queue Limits",
    },
  ],
  "ephemeral": true,
}
`;
